--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(/img/bg.jpeg);
+    background-image: url(/mohmmed23.github.io-game/img/bg.jpeg);
     background-size: cover;
     display: flex;
     justify-content: center;
